--- a/pom.xml
+++ b/pom.xml
@@ -37,22 +37,20 @@
     <github.global.server>github</github.global.server>
 
     <!-- dependencies -->
-    <activemq.version>5.14.0</activemq.version>
-    <camel.version>2.20.4</camel.version>
-    <camel.version.range>[2.20.4,3)</camel.version.range>
+    <activemq.version>5.15.0</activemq.version>
+    <camel.version>3.5.0</camel.version>
+    <camel.version.range>[3.5.0,4)</camel.version.range>
     <commons.io.version>2.4</commons.io.version>
     <commons.lang3.version>3.7</commons.lang3.version>
-    <httpclient.version>4.5.2</httpclient.version>
-    <karaf.version>4.0.6</karaf.version>
+    <httpclient.version>4.5.13</httpclient.version>
     <jena.version>3.1.1</jena.version>
     <mockito.version>1.10.8</mockito.version>
-    <pax-exam.version>4.8.0</pax-exam.version>
-    <slf4j.version>1.7.20</slf4j.version>
-    <spring.version>4.2.5.RELEASE</spring.version>
-    <fcrepo.version>5.0.1</fcrepo.version>
+    <slf4j.version>1.7.30</slf4j.version>
+    <spring.version>5.2.12.RELEASE</spring.version>
+    <fcrepo.version>5.1.1</fcrepo.version>
     <fcrepo-java-client.version>0.4.0</fcrepo-java-client.version>
     <!-- jared's -->
-    <failsafe.plugin.version>2.18.1</failsafe.plugin.version>
+    <failsafe.plugin.version>3.0.0-M3</failsafe.plugin.version>
 
     <!-- osgi bundle transitive dependencies (for karaf provisioning) -->
     <commons.codec.version>1.10</commons.codec.version>
@@ -64,7 +62,6 @@
     <!-- plugins -->
     <jetty.plugin.version>9.3.25.v20180904</jetty.plugin.version>
     <jetty.users.file>${project.build.directory}/test-classes/jetty-users.properties</jetty.users.file>
-    <paxexam.plugin.version>1.2.4</paxexam.plugin.version>
     <!-- osgi bundle configuration -->
     <osgi.export.packages>org.fcrepo.camel.*;version=${project.version}</osgi.export.packages>
     <osgi.import.packages>*</osgi.import.packages>
@@ -91,9 +88,16 @@
   </repositories>
 
   <dependencies>
+
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-core</artifactId>
+      <artifactId>camel-main</artifactId>
+      <version>${camel.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-support</artifactId>
       <version>${camel.version}</version>
     </dependency>
 
@@ -130,14 +134,8 @@
 
     <dependency>
       <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpclient-osgi</artifactId>
+      <artifactId>httpclient</artifactId>
       <version>${httpclient.version}</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.httpcomponents</groupId>
-      <artifactId>httpcore-osgi</artifactId>
-      <version>${httpcore.version}</version>
     </dependency>
 
     <dependency>
@@ -184,15 +182,22 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-http4</artifactId>
+      <artifactId>camel-test-spring</artifactId>
       <version>${camel.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.apache.activemq</groupId>
-      <artifactId>activemq-camel</artifactId>
-      <version>${activemq.version}</version>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-http</artifactId>
+      <version>${camel.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-activemq</artifactId>
+      <version>${camel.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -205,22 +210,15 @@
 
     <dependency>
       <groupId>org.apache.camel</groupId>
-      <artifactId>camel-test-karaf</artifactId>
+      <artifactId>camel-spring-javaconfig</artifactId>
       <version>${camel.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
-      <groupId>org.ops4j.pax.exam</groupId>
-      <artifactId>pax-exam-container-karaf</artifactId>
-      <version>${pax-exam.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.ops4j.pax.exam</groupId>
-      <artifactId>pax-exam-junit4</artifactId>
-      <version>${pax-exam.version}</version>
+      <groupId>org.apache.camel</groupId>
+      <artifactId>camel-xpath</artifactId>
+      <version>${camel.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -232,19 +230,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.karaf</groupId>
-      <artifactId>apache-karaf</artifactId>
-      <version>${karaf.version}</version>
-      <type>zip</type>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.camel.karaf</groupId>
-      <artifactId>apache-camel</artifactId>
-      <version>${camel.version}</version>
-      <type>xml</type>
-      <classifier>features</classifier>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <version>${spring.version}</version>
       <scope>test</scope>
     </dependency>
 
@@ -281,9 +269,6 @@
             <portName>fcrepo.dynamic.jms.port</portName>
             <portName>fcrepo.dynamic.stomp.port</portName>
             <portName>jetty.dynamic.stop.port</portName>
-            <portName>karaf.ssh.port</portName>
-            <portName>karaf.rmiRegistry.port</portName>
-            <portName>karaf.rmiServer.port</portName>
           </portNames>
         </configuration>
         <executions>
@@ -294,40 +279,8 @@
               <goal>reserve-network-port</goal>
             </goals>
           </execution>
-
-          <execution>
-            <id>attach-artifacts</id>
-            <phase>package</phase>
-            <goals>
-              <goal>attach-artifact</goal>
-            </goals>
-            <configuration>
-              <artifacts>
-                <artifact>
-                  <file>target/classes/features.xml</file>
-                  <type>xml</type>
-                  <classifier>features</classifier>
-                </artifact>
-              </artifacts>
-            </configuration>
-          </execution>
         </executions>
       </plugin>
-
-      <!-- pax exam -->
-      <plugin>
-       <groupId>org.ops4j.pax.exam</groupId>
-       <artifactId>maven-paxexam-plugin</artifactId>
-       <version>${paxexam.plugin.version}</version>
-       <executions>
-         <execution>
-           <id>generate-config</id>
-           <goals>
-             <goal>generate-depends-file</goal>
-           </goals>
-         </execution>
-       </executions>
-     </plugin>
 
       <!-- integration testing -->
       <plugin>
@@ -346,17 +299,20 @@
             <httpcore.version>${httpcore.version}</httpcore.version>
             <jsonld.version>${jsonld.version}</jsonld.version>
             <thrift.version>${thrift.version}</thrift.version>
-            <karaf.ssh.port>${karaf.ssh.port}</karaf.ssh.port>
-            <karaf.rmiRegistry.port>${karaf.rmiRegistry.port}</karaf.rmiRegistry.port>
-            <karaf.rmiServer.port>${karaf.rmiServer.port}</karaf.rmiServer.port>
             <project.artifactId>${project.artifactId}</project.artifactId>
             <project.version>${project.version}</project.version>
           </systemPropertyVariables>
         </configuration>
         <executions>
           <execution>
+            <id>integration-test</id>
             <goals>
               <goal>integration-test</goal>
+            </goals>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
               <goal>verify</goal>
             </goals>
           </execution>
@@ -378,7 +334,12 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>8</source>
+          <target>8</target>
+        </configuration>
       </plugin>
 
       <plugin>
@@ -413,74 +374,116 @@
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
 
-        <!-- Launch jetty for integration testing with fedora -->
-        <plugin>
-          <groupId>org.eclipse.jetty</groupId>
-          <artifactId>jetty-maven-plugin</artifactId>
-          <version>${jetty.plugin.version}</version>
-          <configuration>
-            <systemProperties>
-              <force>true</force>
-              <systemProperty>
-                <name>fcrepo.home</name>
-                <value>${project.build.directory}/fcrepo-data</value>
-              </systemProperty>
-              <systemProperty>
-                <name>fcrepo.dynamic.test.port</name>
-                <value>${fcrepo.dynamic.test.port}</value>
-              </systemProperty>
-              <systemProperty>
-                <name>fcrepo.dynamic.jms.port</name>
-                <value>${fcrepo.dynamic.jms.port}</value>
-              </systemProperty>
-              <systemProperty>
-                <name>fcrepo.dynamic.stomp.port</name>
-                <value>${fcrepo.dynamic.stomp.port}</value>
-              </systemProperty>
-              <systemProperty>
-                <name>fcrepo.modeshape.configuration</name>
-                <value>classpath:/config/file-simple/repository.json</value>
-              </systemProperty>
-              <systemProperty>
-                <name>fcrepo.activemq.configuration</name>
-                <value>file:${project.build.directory}/test-classes/config/test_activemq.xml</value>
-              </systemProperty>
-            </systemProperties>
-            <scanIntervalSeconds>10</scanIntervalSeconds>
-            <stopKey>STOP</stopKey>
-            <stopPort>${jetty.dynamic.stop.port}</stopPort>
-            <daemon>true</daemon>
-          </configuration>
-          <executions>
-            <execution>
-              <id>start-jetty</id>
-              <phase>pre-integration-test</phase>
-              <goals>
-                <goal>stop</goal>
-                <goal>start</goal>
-              </goals>
-              <configuration>
-                <jettyXml>${project.build.directory}/test-classes/jetty-test.xml</jettyXml>
-                <scanIntervalSeconds>0</scanIntervalSeconds>
-                <daemon>true</daemon>
-                <contextHandlers>
-                    <contextHandler implementation="org.eclipse.jetty.maven.plugin.JettyWebAppContext">
-                      <war>${project.build.directory}/fcrepo.war</war>
-                      <contextPath>/fcrepo</contextPath>
-                    </contextHandler>
-                </contextHandlers>
-              </configuration>
-            </execution>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0.0</version>
+        <executions>
+          <execution>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>set-system-properties</goal>
+            </goals>
+            <configuration>
+              <properties>
+                <property>
+                  <name>fcrepo.dynamic.jms.port</name>
+                  <value>${fcrepo.dynamic.jms.port}</value>
+                </property>
+                <property>
+                  <name>fcrepo.dynamic.test.port</name>
+                  <value>${fcrepo.dynamic.test.port}</value>
+                </property>
+                <property>
+                  <name>fcrepo.dynamic.stomp.port</name>
+                  <value>${fcrepo.dynamic.stomp.port}</value>
+                </property>
 
-            <execution>
-              <id>stop-jetty</id>
-              <phase>post-integration-test</phase>
-               <goals>
-                 <goal>stop</goal>
-               </goals>
-             </execution>
-          </executions>
-        </plugin>
+                <property>
+                  <name>fcrepo.home</name>
+                  <value>${project.build.directory}/fcrepo-data</value>
+                </property>
+                <property>
+                  <name>fcrepo.modeshape.configuration</name>
+                  <value>classpath:/config/file-simple/repository.json</value>
+                </property>
+                <property>
+                  <name>fcrepo.activemq.configuration</name>
+                  <value>file:${project.build.directory}/test-classes/config/test_activemq.xml</value>
+                </property>
+              </properties>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+
+      <!-- Launch jetty for integration testing with fedora -->
+      <plugin>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-maven-plugin</artifactId>
+        <version>${jetty.plugin.version}</version>
+        <configuration>
+          <systemProperties>
+            <force>true</force>
+            <systemProperty>
+              <name>fcrepo.home</name>
+              <value>${project.build.directory}/fcrepo-data</value>
+            </systemProperty>
+            <systemProperty>
+              <name>fcrepo.dynamic.test.port</name>
+              <value>${fcrepo.dynamic.test.port}</value>
+            </systemProperty>
+            <systemProperty>
+              <name>fcrepo.dynamic.jms.port</name>
+              <value>${fcrepo.dynamic.jms.port}</value>
+            </systemProperty>
+            <systemProperty>
+              <name>fcrepo.dynamic.stomp.port</name>
+              <value>${fcrepo.dynamic.stomp.port}</value>
+            </systemProperty>
+            <systemProperty>
+              <name>fcrepo.modeshape.configuration</name>
+              <value>classpath:/config/file-simple/repository.json</value>
+            </systemProperty>
+            <systemProperty>
+              <name>fcrepo.activemq.configuration</name>
+              <value>file:${project.build.directory}/test-classes/config/test_activemq.xml</value>
+            </systemProperty>
+          </systemProperties>
+          <scanIntervalSeconds>10</scanIntervalSeconds>
+          <stopKey>STOP</stopKey>
+          <stopPort>${jetty.dynamic.stop.port}</stopPort>
+          <daemon>true</daemon>
+        </configuration>
+        <executions>
+          <execution>
+            <id>start-jetty</id>
+            <phase>pre-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+              <goal>start</goal>
+            </goals>
+            <configuration>
+              <jettyXml>${project.build.directory}/test-classes/jetty-test.xml</jettyXml>
+              <scanIntervalSeconds>0</scanIntervalSeconds>
+              <contextHandlers>
+                <contextHandler implementation="org.eclipse.jetty.maven.plugin.JettyWebAppContext">
+                  <war>${project.build.directory}/fcrepo.war</war>
+                  <contextPath>/fcrepo</contextPath>
+                </contextHandler>
+              </contextHandlers>
+            </configuration>
+          </execution>
+
+          <execution>
+            <id>stop-jetty</id>
+            <phase>post-integration-test</phase>
+            <goals>
+              <goal>stop</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
 
         <!--Bring in fcrepo webapp for integration testing-->
         <plugin>
@@ -508,10 +511,6 @@
             </execution>
           </executions>
         </plugin>
-
-
-
-
     </plugins>
   </build>
 
